--- a/Day10 Task/stylesheet1.html
+++ b/Day10 Task/stylesheet1.html
@@ -3,25 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event update page</title>
-    <link rel="stylesheet" type="text/css" href="./stylesheet1.css">
+    <title>Event Update Page</title>
+    <link rel="stylesheet" href="./stylesheet1.css">
 </head>
 <body>
-    <h1>Event 1</h1>
-    <h3>Number of available seats: 23</h3>
     <div class="container">
-        <div>
-            <div class="left"><img src="https://images.pexels.com/photos/587741/pexels-photo-587741.jpeg?auto=compress&cs=tinysrgb&w=600" width=300px alt="events"></div>
-            <label for="name">Name:
-                <input type="text"><br><br>
-                Email: <input type="text"><br><br>
-                Phone No.: <input type="text"> <br><br>
-                Number of seats :<input type="number"><br><br>
-                Name of Attendee 2:<input type="text"><br><br>
-                <input type="submit"> <input type="button" value="cancel">
-            </label>
-            
-        </div>
+    <h1>EVENT 1</h1>
+    <h3>Number of available seats: 23</h3>
+    <div class="border">
+    <div class="img">
+    <img src="./images/balloons-1869790_1280.jpg">
     </div>
+    <div class="format">
+        <label>
+            Name: <input type="text"><br><br>
+            Email:<input type="text"><br><br>
+            Phone No: <input type="text"><br><br>
+            Number of seats:<input type="number" max="2" min="2"><br><br>
+            Nameof Attendee 2:<input type="text">
+            <div class="button">
+            <input type="submit">
+            <input type="button" value="cancel">
+            </div>
+        </label>
+    </div>
+    </div>
+</div>
 </body>
 </html>
